--- a/pages/html.html
+++ b/pages/html.html
@@ -8,7 +8,7 @@
     <title>Learn HTML</title>
 
     <nav id="top">
-        <a href="C:\Users\etown\OneDrive\Documents\Coding\CFG Intro to Web Dev\final-project\index.html">Home</a> 
+        <a href="../index.html">Home</a> 
         <a href="https://codefirstgirls.com/" target="_blank">CFG</a>
         <a href="https://www.w3schools.com/" target="_blank">W3 Schools</a>
         <a href="https://www.google.co.uk/" target="_blank">Google</a>
