--- a/pages/java.html
+++ b/pages/java.html
@@ -11,11 +11,11 @@
 
 <body>
     <nav id="top">
-        <a href="C:\Users\etown\OneDrive\Documents\Coding\CFG Intro to Web Dev\final-project\index.html">Home</a> 
-        <a href="https://codefirstgirls.com/" target="_blank">CFG</a>
-        <a href="https://www.w3schools.com/" target="_blank">W3 Schools</a>
-        <a href="https://www.google.co.uk/" target="_blank">Google</a>
-      </nav>
+        <a href="../index.html">Home</a> 
+        <a href="https://codefirstgirls.com/">CFG</a>
+        <a href="">Members</a>
+        <a href="">Links</a>
+    </nav>
 
     <div class="title">
         <img id="javascript-logo" src="../images/logo-javascript.png" alt="JavaScript logo">
@@ -184,9 +184,4 @@
     </div>
     
 </body>
-
-<footer>
-    <h4>&#169 Copyright 2022 &#x270C</h4>
-  </footer>
-  </html>
-  
+</html>
